--- a/angular/src/app/shopping-item/shopping-item.component.css
+++ b/angular/src/app/shopping-item/shopping-item.component.css
@@ -1,5 +1,9 @@
 @import 'https://bootswatch.com/4/flatly/bootstrap.min.css';
 
+
+h1{
+    text-align: center;
+}
 .list-group{
     max-height: 300px;
     margin-bottom: 10px;
@@ -7,10 +11,20 @@
     -webkit-overflow-scrolling: touch;
 }
 form {
-    width: 500px; margin: auto; transform: translate(-702px, -5px);
+    width: 700px; margin: auto; 
     background-color: aqua;
+    float: left;
 }
 
+.addListclass{
+    float: left;
+    
+   
+}
+.showListclass{
+    float: right;
+   
+}
 input {
     border-color: black;
     width:100%;
@@ -18,6 +32,7 @@ input {
      }
 
      table, th, td {
+         
         padding: 10px;
       }
 
@@ -28,10 +43,36 @@ button{
 
 table{
     table-layout: fixed;
-    width: 50%;
+    width: 100%;
     overflow: scroll;
 }
   
   th, td {
-    padding: 1px;
+    padding: 0px;
+   
   }
+  .red {
+    width:4000px;
+    height:1000px;
+   
+    overflow: scroll;
+    padding: 1% 0 0 1%;
+}
+
+.table2{
+    border: 1px solid black;
+    background-color: brown;
+    width: 50%;
+    overflow: scroll;
+    overflow-y:scroll;
+    overflow-x:hidden;
+ 
+}
+
+.blue {
+    height:200px;
+    width:24%;
+    display:inline-block;
+    float: left;
+    
+}
