removed dialog component

--- a/angular/src/app/shopping-item/shopping-item.component.html
+++ b/angular/src/app/shopping-item/shopping-item.component.html
@@ -100,7 +100,7 @@
       <form class="bg-info">
         <div class="input-group mb-3">
           <input type="text" placeholder="Search" maxlength="20" style="width: auto;">
-          <button type="submit" class="bg-primary " style="color: white;" (click)="openDialog()" >Search ListName</button>
+          <button type="submit" class="bg-primary " style="color: white;" >Search ListName</button>
         </div>
         <br><br>
       </form>
