--- a/angular/src/app/add-dialog/add-dialog.component.html
+++ b/angular/src/app/add-dialog/add-dialog.component.html
@@ -14,17 +14,9 @@
         <label for="itemQuantity">ItemQuantity:</label>
         <input matInput type="number" [(ngModel)]="data.itemQuantity" matInput required>
     </mat-form-field>
-    <br>
-    <mat-form-field>
-        <label for="listDate">ListDate: </label>
-        <input matInput  type="date" id="start" name="trip-start" value="2018-07-22" min="2018-01-01" max="today"
-            [(ngModel)]="data.listDate">
-    </mat-form-field>
-
     <mat-dialog-actions>
-        <button class="mat-raised-button" [mat-dialog-close]="data" 
+        <button  [mat-dialog-close]="data" class="btn btn-success"
             (click)="addList( { value: {listName: data.listName, itemName: data.itemName, itemQuantity: data.itemQuantity, listDate: data.listDate  } }); "  >Save</button>
-        <button class="mat-raised-button" (click)="closeDialog()">Cancel</button>
+        <button class="btn btn-danger" (click)="closeDialog()">Cancel</button>
     </mat-dialog-actions>
-
 </div>
