--- a/angular/src/app/shopping-item/shopping-item.component.html
+++ b/angular/src/app/shopping-item/shopping-item.component.html
@@ -1,11 +1,31 @@
-<body class="bg-info">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" style="font-weight: bolder;">My ShoppingList</a>
-    <button class=" btn btn-success" (click)="openAddDialog()">
-      <mat-icon>add</mat-icon>
-    </button>
+  <body>
+
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+    <div class="container">
+      <a class="navbar-brand"><button (click)="openAddDialog()" class="btn btn-primary">Add Shopping List</button></a>
+      <a class="navbar-brand"><button (click)="openContactDialog()" class="btn btn-info">Contact me</button></a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        Menu
+        <i class="fas fa-bars"></i>
+      </button>
+    </div>
   </nav>
-  <h2>List of shoppingLists</h2>
+  <header class="masthead" >
+    <div class="overlay"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-md-10 mx-auto">
+          <div class="site-heading">
+            <h1>Shopping List</h1>
+            <br>
+            <h2>Shopping List created using MEAN Stack by Sidharth Jaiswal</h2>
+          </div>
+        </div>
+      </div>
+    </div>
+  </header>
+  <div class="container">
   <div id="table-wrapper">
     <div id="table-scroll" class="mat-elevation-z8">
       <mat-table [dataSource]="dataSource">
@@ -37,5 +57,15 @@
       </mat-table>
     </div>
   </div>
-  <h3 style="font-style: italic;">A Project developed by Sidharth Jaiswal</h3>
+</div>   
+
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-md-10 mx-auto">
+          <p class="copyright text-muted">Copyright &copy; My ShoppingList 2020</p>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
