--- a/angular/src/app/shopping-item/shopping-item.component.html
+++ b/angular/src/app/shopping-item/shopping-item.component.html
@@ -5,6 +5,8 @@
     <div class="container">
       <a class="navbar-brand"><button (click)="openAddDialog()" class="btn btn-primary">Add Shopping List</button></a>
       <a class="navbar-brand"><button (click)="openContactDialog()" class="btn btn-info">Contact me</button></a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      </button>
     </div>
   </nav>
   <header class="masthead" >
