changing bg color

--- a/angular/src/app/shopping-item/shopping-item.component.css
+++ b/angular/src/app/shopping-item/shopping-item.component.css
@@ -290,7 +290,7 @@ img::-moz-selection {
 header.masthead {
     margin-bottom: 50px;
     background: no-repeat center center;
-    background-color: #1f5296;
+    background-color: #2C3E50;
     background-attachment: scroll;
     position: relative;
     background-size: cover;
