--- a/angular/src/app/shopping-item/shopping-item.component.html
+++ b/angular/src/app/shopping-item/shopping-item.component.html
@@ -1,67 +1,67 @@
-  <body>
+<body>
 
-  <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-    <div class="container">
-      <a class="navbar-brand"><button (click)="openAddDialog()" class="btn btn-primary">Add Shopping List</button></a>
-      <a class="navbar-brand"><button (click)="openContactDialog()" class="btn btn-info">Contact me</button></a>
-    </div>
-  </nav>
-  <header class="masthead" >
-    <div class="overlay"></div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <div class="site-heading">
-            <h1>Shopping List</h1>
-            <br>
-            <h2>Shopping List created using MEAN Stack by Sidharth Jaiswal</h2>
-          </div>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+        <div class="container">
+            <a class="navbar-brand"><button (click)="openAddDialog()" class="btn btn-primary">Add Shopping List</button></a>
+            <a class="navbar-brand"><button (click)="openContactDialog()" class="btn btn-info">Contact me</button></a>
         </div>
-      </div>
-    </div>
-  </header>
-  <div class="container">
-  <div id="table-wrapper">
-    <div id="table-scroll" class="mat-elevation-z8">
-      <mat-table [dataSource]="dataSource">
-        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-        <ng-container matColumnDef="listName">
-          <mat-header-cell *matHeaderCellDef> List Name </mat-header-cell>
-          <mat-cell *matCellDef="let list"> {{list.listName}} </mat-cell>
-        </ng-container>
-        <ng-container matColumnDef="itemName">
-          <mat-header-cell *matHeaderCellDef> Item Name </mat-header-cell>
-          <mat-cell *matCellDef="let list"> {{list.itemName}} </mat-cell>
-        </ng-container>
-        <ng-container matColumnDef="itemQuantity">
-          <mat-header-cell *matHeaderCellDef> Item Quantity </mat-header-cell>
-          <mat-cell *matCellDef="let list"> {{list.itemQuantity}} </mat-cell>
-        </ng-container>
-        <ng-container matColumnDef="actions">
-          <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
-          <mat-cell *matCellDef="let row">
-            <button class="btn btn-warning " (click)="openEditDialog(row)">
+    </nav>
+    <header class="masthead">
+        <div class="overlay"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-md-10 mx-auto">
+                    <div class="site-heading">
+                        <h1>Shopping List</h1>
+                        <br>
+                        <h2>A project created using MEAN Stack by Sidharth Jaiswal</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <div class="container">
+        <div id="table-wrapper">
+            <div id="table-scroll" class="mat-elevation-z8">
+                <mat-table [dataSource]="dataSource">
+                    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+                    <ng-container matColumnDef="listName">
+                        <mat-header-cell *matHeaderCellDef> List Name </mat-header-cell>
+                        <mat-cell *matCellDef="let list"> {{list.listName}} </mat-cell>
+                    </ng-container>
+                    <ng-container matColumnDef="itemName">
+                        <mat-header-cell *matHeaderCellDef> Item Name </mat-header-cell>
+                        <mat-cell *matCellDef="let list"> {{list.itemName}} </mat-cell>
+                    </ng-container>
+                    <ng-container matColumnDef="itemQuantity">
+                        <mat-header-cell *matHeaderCellDef> Item Quantity </mat-header-cell>
+                        <mat-cell *matCellDef="let list"> {{list.itemQuantity}} </mat-cell>
+                    </ng-container>
+                    <ng-container matColumnDef="actions">
+                        <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
+                        <mat-cell *matCellDef="let row">
+                            <button class="btn btn-warning " (click)="openEditDialog(row)">
               <mat-icon>create</mat-icon>
             </button>
-            <button class="btn btn-danger" (click)="openDeleteConfirmDialog(row._id)">
+                            <button class="btn btn-danger" (click)="openDeleteConfirmDialog(row._id)">
               <mat-icon>delete</mat-icon>
             </button>
-          </mat-cell>
-        </ng-container>
-      </mat-table>
-    </div>
-  </div>
-</div>   
-
-  <footer>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <p class="copyright text-muted">Copyright &copy; My ShoppingList 2020</p>
+                        </mat-cell>
+                    </ng-container>
+                </mat-table>
+            </div>
         </div>
-      </div>
     </div>
-  </footer>
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-md-10 mx-auto">
+                    <p class="copyright text-muted">Copyright &copy; My ShoppingList 2020</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
