--- a/angular/src/app/shopping-item/shopping-item.component.css
+++ b/angular/src/app/shopping-item/shopping-item.component.css
@@ -13,7 +13,6 @@ h1 {
 form {
     width: 500px;
     margin: auto;
-    background-color: aqua;
     float: left;
 }
 
@@ -73,12 +72,14 @@ td {
 
 body {
     margin: 0;
+    height: 100%;
 }
 
 #table-wrapper {
     position: auto;
     display: flex;
     width: 100%;
+    height: 50%;
     background-color: white;
 }
 
@@ -113,18 +114,16 @@ body {
     top: 0;
 }
 
+.mat-table {
+    height: 50%;
+}
+
 
 /*!
  * Start Bootstrap - Clean Blog v5.0.10 (https://startbootstrap.com/theme/clean-blog)
  * Copyright 2013-2020 Start Bootstrap
  * Licensed under MIT (https://github.com/StartBootstrap/startbootstrap-clean-blog/blob/master/LICENSE)
  */
-
-body {
-    font-size: 20px;
-    color: #212529;
-    font-family: 'Lora', 'Times New Roman', serif;
-}
 
 p {
     line-height: 1.5;
