--- a/angular/src/app/about-me/about-me.component.html
+++ b/angular/src/app/about-me/about-me.component.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
 <body>
     <h1>About Me </h1>
     <h2>Introduction:</h2>
@@ -25,3 +27,4 @@
     <button class="btn btn-danger" (click)="closeDialog()">Back</button>
     <img src="./profile.jpg" alt="CV photo" style="height: auto; width: auto;">
 </body>
+</html>
